# MCSL2

./: .gitignore  BungeeCordDownloadInfo.json  CONTRIBUTING  CONTRIBUTING.md  ChangeLog.md  CommitHistory.md  FuzzySearchJavaPath.py  Info.plist  JavaDownloadInfo.json  LICENSE  MCSL2.icns  MCSL2.py  MCSL2.spec  MCSL2_Aria2Controller.py  MCSL2_AskDialog.py  MCSL2_Dialog.py  MCSL2_Dialog.ui  MCSL2_DownloaderAPIParser.py  MCSL2_Icon.qrc  MCSL2_JavaDetector.py  MCSL2_Linux.py  MCSL2_MainWindow.py  MCSL2_MainWindow.ui  MCSL2_SubWidget_ScrollArea.py  MCSL2_SubWidget_ScrollArea_Download.py  MCSL2_SubWidget_ScrollArea_Select.py  MCSL2_Utils.py  MCSL2_Windows.py  MCSL2_macOS.py  MCSL_PREVIEW.md  MCSL_PREVIEW_EN.md  PaperDownloadInfo.json  PluginDevelopment.md  README.MD  README.md  README_EN.md  SpigotDownloadInfo.json  Sponsors.md  build.ps1  build.py  (+24 more)
.github/: FUNDING.yml  afdian-action.cshtml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  EN-BUG-REPORT.yml  ISSUE_AND_PROPOSAL.yml  ZH-BUG-REPORT.yml  bug1.yml  bug_report.md  bug_report.yml  bug_report_template.md  config.yml  feature_suggest_template.md  issue.yml  question_template.md
.github/utils/: install_deps.py
.github/workflow/: build.yml
.github/workflows/: afdian-sponsor.yml  afdian.yml  build-test.yml  build.yml  check_pr.yml  codeql.yml  debug.yml  debug_linux.yml  debug_macos.yml  debug_windows.yml  detect-depends.yml  main.yml
Adapters/: BasePlugin.py  Plugin.py  PluginThreadPool.py  mcsl2_api.py
Adapters/Event/: BaseEvent.py  Event.py
Aria2/: aria2.conf
DownloaderAPI/GHProxy/: BungeeCordDownloadInfo.json  JavaDownloadInfo.json  PaperDownloadInfo.json  SpigotDownloadInfo.json
DownloaderAPI/GitHub/: BungeeCordDownloadInfo.json  JavaDownloadInfo.json  PaperDownloadInfo.json  SpigotDownloadInfo.json
DownloaderAPI/Gitee/: BungeeCordDownloadInfo.json  JavaDownloadInfo.json  PaperDownloadInfo.json  SpigotDownloadInfo.json
DownloaderAPI/SharePoint/: BungeeCordDownloadInfo.json  JavaDownloadInfo.json  PaperDownloadInfo.json  SpigotDownloadInfo.json
DownloaderAPI/luoxisCloud/: BungeeCordDownloadInfo.json
Icons/: icons.qrc  sponsors.qrc
MCSL2/: MCSL2_ServerList.json
MCSL2Lib/: DownloadProgressWidget.py  FastMirrorAPI.py  FastMirrorWidgets.py  MCSLAPI.py  MCSLAPIParser.py  __init__.py  aria2ClientController.py  configurePage.py  consolePage.py  downloadPage.py  downloadProgressWidget.py  exceptionWidget.py  homePage.py  icons.py  initProgram.py  interfaceController.py  javaDetector.py  lazyLoader.py  loadingTipWidget.py  navigationController.py  networkController.py  noVerification.py  playersControllerMainWidget.py  pluginPage.py  pluginWidget.py  publicFunctions.py  selectJavaPage.py  selectJavaWidget.py  selectNewJavaPage.py  serverController.py  serverInstaller.py  serverManagerPage.py  serverManagerWidget.py  settingsController.py  settingsPage.py  singleConsoleWidget.py  singleMCSLAPIDownloadWidget.py  singleton.py  sponsorWidget.py  sponsorsImage.py  (+6 more)
MCSL2Lib/Controllers/: ServerSettingController.py  aria2ClientController.py  interfaceController.py  javaDetector.py  logController.py  networkController.py  serverController.py  serverErrorHandler.py  serverImporter.py  serverInstaller.py  serverValidator.py  settingsController.py  updateController.py
MCSL2Lib/DownloadAPIs/: AkiraCloud.py  FastMirrorAPI.py  MCSLAPI.py  PolarsAPI.py
MCSL2Lib/ImportServerTypes/: importMCSLv1.py  importMCSLv2.py  importMCSM8.py  importMCSM9.py  importMSL3.py  importNoShellArchives.py  importNullCraft.py  importServerArchiveSite.py  importShellArchives.py
MCSL2Lib/Pages/: configEditorPage.py  configurePage.py  consoleCenterPage.py  consolePage.py  downloadPage.py  homePage.py  pluginPage.py  schedulerPage.py  selectImportJavaPage.py  selectJavaPage.py  selectNewJavaPage.py  serverManagerPage.py  settingsPage.py
MCSL2Lib/ProgramControllers/: ServerSettingController.py  aria2ClientController.py  downloadController.py  downloadController_test.py  interfaceController.py  javaDetector.py  logController.py  multiThreadDownloadController.py  networkController.py  promptController.py  serverController.py  (+6 more)
MCSL2_Libs/: IndeterminateProgressBar.py  MCSL2_Aria2Controller.py  MCSL2_AskDialog.py  MCSL2_Dialog.py  MCSL2_DownloadURLParser.py  MCSL2_Init.py  MCSL2_JavaDetector.py  MCSL2_JsonReader.py  MCSL2_Logger.py  MCSL2_MainWindow.py  MCSL2_ScalingFixer.py  MCSL2_ServerController.py  MCSL2_Settings.py  MCSL2_Updater.py  MCSL2_Utils.py  ProgressBar.py
Old_MCSL2_Libs/: MCSL2_Init.py  MCSL2_MainWindow.py
PluginExample/: PluginExample.py  config.json
QtUI/: Interface_configure.ui  Interface_console.ui  Interface_download.ui  Interface_download_core.ui  Interface_download_version.ui  Interface_home.ui  Interface_manager.ui  Interface_manager_single.ui  Interface_plugins.ui  Interface_plugins_single.ui  Interface_select_java.ui  Interface_select_java_single.ui  Interface_settings.ui  LoadingTipWidget.ui  Ui_Interface_configure.py  Ui_Interface_download.py  Ui_Interface_download_build.py  Ui_Interface_download_core.py  Ui_Interface_download_version.py  Ui_playersControllerMainWidget.py  configureInterface.ui  consoleInterface.ui  downloadInterfacce.ui  downloadInterfacce_build.ui  downloadInterface.ui  downloadInterface_build.ui  downloadInterface_core.ui  downloadInterface_version.ui  downloadProgressWidget.ui  exceptionWidget.ui  homeInterface.ui  managerInterface.ui  playersControllerMainWidget.ui  pluginsInterface.ui  settingsInterface.ui  singleConsoleWidget.ui  singlePluginWidget.ui
Tools/: Console.bat  OfflineBuild.bat  gen-requirements.py  lazyLoader.py  lndl-config.py  update-pyproject.py
i18n/: en_US.qm  en_US.ts  zh_CN.ts
resources/: MCSL2_AskDialog.py  MCSL2_AskDialog.ui  MCSL2_Dialog.py  MCSL2_Dialog.ui  MCSL2_Icon.qrc  MCSL2_MainWindow.py  MCSL2_MainWindow.ui  MCSL2_SubWidget_ScrollArea.py  MCSL2_SubWidget_ScrollArea.ui  MCSL2_SubWidget_ScrollArea_Download.py  MCSL2_SubWidget_ScrollArea_Download.ui  MCSL2_SubWidget_ScrollArea_Select.py  MCSL2_SubWidget_ScrollArea_Select.ui  MCSL2_SubWidgets.py  MCSL2_SubWidgets.ui
(+215 files in other folders)
