[project]
name = "MCSL2"
dynamic = ["version"]
description = "MCServerLauncher 2"
authors = [
    { name = "LxHTT", email = "lxhtt@mcsl.com.cn" },
    { name = "shenjackyuanjie", email = "3695888@qq.com" },
    { name = "AresConnor", email = "2837434884@qq.com" },
    { name = "lgc2333", email = "lgc2333@126.com" },
    { name = "wyx55520", email = "2509043002@qq.com" },
    { name = "Yurnu", email = "1487084645@qq.com" },
    { name = "hengshizhi", email = "3192145045@qq.com" },
    { name = "ztsinsun", email = "horizonsun@vip.qq.com" },
    { name = "ltzXiaoYanMo", email = "yanmo233@duck.com" },
    { name = "kitUIN", email = "kit_uin@outlook.com" },
]
dependencies = [
    "setuptools>=60", # 随便指定个版本就好 (
    # qt
    "PyQt5",
    "PyQt-Fluent-Widgets[full]",
    "pyqt5-qt5==5.15.2",
    # 系统信息
    "psutil==5.9.5",
    "loguru==0.7.2",
    "requests==2.31.0",
    "aria2p==0.11.3",
    # 构建需要
    "lib-not-dr[nuitka]>=0.3",
    "nuitka==2.0.3",
    "QScintilla>=2.14.1",
    "pyqt5-concurrent>=0.1.1",
]
requires-python = ">=3.8,<3.9"
readme = "README.md"
license = { text = "GPL-3.0" }

[tool.setuptools.dynamic]
version = { attr = "MCSL2Lib.MCSL2VERSION" }

[tool.setuptools]
packages = []
# 实际上并不发布包 (用于解决无法 pdm install)

[project.optional-dependencies]
all = ["tomli>=2.0.1", "ruff>=0.1.6", "pyqt5-stubs>=5.15.6.0"]

[tool.pdm.scripts]
main = "python MCSL2.py"
build = "python -m lndl_nuitka . -y"
build_github = "python -m lndl_nuitka . -y -- --disable-console"
i18n = "python generate_i18n.py"

[tool.ruff]
target-version = "py38"
line-length = 100
src = ["MCSL2Lib", "PluginExample", "Tools", "Adapters"]
output-format = "grouped"
preview = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle
]
ignore = ["I001"]

[tool.ruff.lint.isort]
force-single-line = true
force-wrap-aliases = true
combine-as-imports = true


[tool.lndl.nuitka]
script = "Tools/lndl-config.py"

# 请使用 lndl_nuitka . -y 编译 (-y 为自动确认)
[tool.lndl.nuitka.cli]
main = "MCSL2.py"
output-dir = "build"

# 编译选项
clang = true
msvc = "latest"
standalone = true
lto = "yes"
disable-console = false
show-memory = false
show-progress = false

# 版本号 构建时通过 Tools/lndl-config.py 自动填充
product-version = false
file-version = false

# 文件信息
product-name = "MCSL 2"
company-name = "MCSLTeam"
file-description = "MCServerLauncher 2"
copyright = "Copyright ©MCSLTeam. All rights reserved."

# 依赖
include-package = ["MCSL2Lib", "sqlite3"]
include-data-dir = [["MCSL2/Aria2", "MCSL2/Aria2"]]
follow-import-to = ["Adapters", "loguru", "requests"]
nofollow-import-to = ["numpy", "scipy", "PIL", "colorthief", "sqlite3.test"]

enable-plugin = ["pyqt5", "multiprocessing"]
windows-icon-from-ico = "MCSL2.ico"
assume-yes-for-download = true
